@@ -706,7 +706,7 @@ AC_SUBST(RPM_BUILD_DIR)
 
 
 dnl Default build variables.
-SQLR_VERSION="0.43"
+SQLR_VERSION="0.44"
 AC_SUBST(SQLR_VERSION)
 AC_DEFINE_UNQUOTED(SQLR_VERSION,"$SQLR_VERSION",Version)
 dnl rules for CURRENT:REVISION:AGE version info:
